✅ 완료: 백엔드 서버 실행 문제 완전 해결
✨ 주요 성과:
- 백엔드 서버 8.11초 안정적 시작 (http://localhost:8080)
- 모든 Bean 의존성 충돌 해결
- ChallengeRepository 도메인 구현체 생성
- JPQL 쿼리 검증 및 안정화
- 16개 JPA Repository 정상 등록
- 캐시 시스템 정상 작동

🔧 해결한 문제들:
- Bean 충돌: challengePortAdapter vs challengeRepositoryAdapter
- JPQL 검증 실패: findPopularChallenges 쿼리 수정
- Repository 어댑터 구조 개선

📈 시스템 상태:
- HikariCP 연결 풀 정상 작동
- Flyway 마이그레이션 완료 (21개)
- Spring Security 필터 정상 등록
- 캐시 영역 20개 활성화

🚀 다음 단계: Hibernate Second-level Cache 활성화

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>